--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+v1.4.3
+1. Support latest model PiSugar 2 with 2-LEDs and PiSugar 2 Pro with no LEDs
+   (improved charging control)
+2. Set RTC timezone to UTC
+
 v1.4.1
 1. Some updates
 
